# phi47

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scientific_review.yml
.github/workflows/: pages.yml  publish.yml  tests.yml
docs/: CNAME  api-reference.md  contributing.md  getting-started.md  index.md  mathematical-model.md  security.md  validation-roadmap.md
docs/science/: SCIENTIFIC_STATUS.md
examples/: 01_hello_phi47.py
phi47/: __init__.py  cli.py
phi47/algorithms/: __init__.py
phi47/consciousness/: __init__.py  integration_proxy.py  phi_measure.py
phi47/core/: __init__.py  constants.py  kernel.py  lattice.py  tau_star.py
phi47/qualia/: __init__.py  engine.py
phi47/utils/: __init__.py
tests/: conftest.py  test_consciousness.py  test_descriptors.py  test_integration_proxy.py  test_kernel.py  test_lattice.py  test_predictions.py  test_tau_star_and_qualia.py
